fix: add support for sigilum-subject (user level) in http request
